# anime-lineart

./: .gitignore  DEVELOPER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
src/anime_lineart/: __init__.py
src/anime_lineart/cli/: main.py
src/anime_lineart/config/: __init__.py  config.py
src/anime_lineart/core/contour/: base.py  opencv_contour_extractor.py
src/anime_lineart/core/optimization/: base.py  opencv_path_optimizer.py
src/anime_lineart/core/pipeline/: pipeline.py
src/anime_lineart/core/segmentation/: base.py  opencv_segmenter.py
src/anime_lineart/exporters/: svg_exporter.py
src/anime_lineart/models/: path.py
src/anime_lineart/utils/: image_loader.py
tests/: test_cli.py
