[project]
name = "anime-lineart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "svgwrite>=1.4.3",
]

[project.scripts]
anime-lineart = "anime_lineart:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
